# cuda_plus_offload

./: CMakeLists.txt  Makefile.clang17.nv  Makefile.hip  Makefile.nvhpc  README.md  cu_impl.cpp  cu_impl.h  cu_impl.hxx  cump_config.h  hip_impl.cpp  hip_impl.h  hip_impl.hxx  main.cpp  mp_impl.cpp  mp_impl.h
both/: CMakeLists.txt
cu/: CMakeLists.txt
mp/: CMakeLists.txt
